--- a/_posts/2019-03-11-MarkDown.md
+++ b/_posts/2019-03-11-MarkDown.md
@@ -1,4 +1,11 @@
-# Dillinger
+---
+layout: post
+title: MarkDown
+category: CSS
+tags: [css]
+---
+
+## Dillinger
 
 [![N|Solid](https://cldup.com/dTxpPi9lDf.thumb.png)](https://nodesource.com/products/nsolid)
 ```java
@@ -14,7 +21,7 @@ Dillinger is a cloud-enabled, mobile-ready, offline-storage, AngularJS powered H
   - See HTML in the right
   - Magic
 
-# New Features!
+## New Features!
 
   - Import a HTML file and watch it magically convert to Markdown
   - Drag and drop images (requires your Dropbox account be linked)
@@ -110,7 +117,7 @@ $ gulp watch
 ```sh
 $ karma test
 ```
-#### Building for source
+### Building for source
 For production release:
 ```sh
 $ gulp build --prod
@@ -142,7 +149,7 @@ Verify the deployment by navigating to your server address in your preferred bro
 127.0.0.1:8000
 ```
 
-#### Kubernetes + Google Cloud
+### Kubernetes + Google Cloud
 
 See [KUBERNETES.md](https://github.com/joemccann/dillinger/blob/master/KUBERNETES.md)
 
