--- a/_posts/2019-03-11-Git-Page安装教程.md
+++ b/_posts/2019-03-11-Git-Page安装教程.md
@@ -8,3 +8,27 @@ tags: [github]
 这是一篇关于Git Page的使用教程，记录一下过程！
 
 ## 寻找主题
+你可以在[jekyllthemes](http://jekyllthemes.org/)中找到一些好看的主题,像这里，我选择了一款
+叫[Yummy Theme](http://jekyllthemes.org/themes/yummy-theme/)的主题。可以点击`Demo`查看具
+体样式，选择好了以后点击`HomePage`进入到GitHUb页面。
+
+## 安装
+要安装需要申请一个GitHub账号，如果没有账号的请先[注册](https://github.com/join?source=header-home)。
+点击右上角`Fork`
+
+![](https://github.com/MGXT/repository/blob/master/images/fork.png)
+
+稍微等一下就可以了，然后点击Seeting，修改`Repository name`,格式为`user_name.github.io`
+其中`user_name`就是你的名字(一般小写)
+
+![](https://github.com/MGXT/repository/blob/master/images/958413757.png)
+
+修改完后点击`rename`就可以了，一般这时候访问刚才设置的`Repository name`就可以显示网页(可能有些东西不会很完整的显示)到这里安装工作算是完成了
+
+## 配置
+如果出现页面能成功访问但是显示不正常的情况，放心，接下来就是解决步骤。
+我们返回Code,修改_config.yml,点击铅笔样式进行修改
+
+![]()
+![]()
+重点修改项就是url，将其修改为之前设置的`http://Repository name`，其他的按需求修改，这里就不多介绍了。修改完毕后点击最下方的`Commit changes`，过上一小会儿就可以了
